# audio-gurbani-api

./: .gitignore  .pre-commit-config.yaml  Justfile  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
app/: database.py  main.py  settings.py
app/admin/: dependencies.py  models.py  repository.py  schemas.py  service.py  views.py
app/artist/: models.py  repository.py  schemas.py  views.py
app/audio/: models.py  repository.py  schemas.py  service.py  views.py
app/banis/: router.py  schemas.py  service.py
app/collection/: models.py  repository.py  schemas.py  views.py
app/file/: schemas.py  service.py  views.py
app/hukamnama/: exceptions.py  models.py  repository.py  schemas.py  service.py  views.py
app/utilities/: database.py  schemas.py  settings.py
assets/: banis.json
migrations/: 20250102022510_create_artists_table.sql  20250102022526_create_collections_table.sql  20250102023001_create_audios_table.sql  20250102183401_create_administrators_table.sql  20250119073808_add_description_to_artists_table.sql  20250129201009_create_hukamnamas_table.sql  20250130153403_make_description_nullable_artists_table.sql
